[tool.poetry]
name = "cover-letter-llm"
version = "0.1.0"
description = ""
authors = ["Kavish Hukmani <khukmani@gmail.com>"]
readme = "README.md"
packages = [{include = "cover_letter_llm"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.350"
pytest-playwright = "^0.4.3"
openai = "^1.5.0"
html2text = "^2020.1.16"
streamlit = "^1.29.0"
pypdf2 = "^3.0.1"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
