[tool.poetry]
name = "cover-letter-llm"
version = "0.1.0"
description = ""
authors = ["Kavish Hukmani <khukmani@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.3.7"
langchain-community = "0.3.7"
langchain-openai = "0.2.8"
html2text = "2024.2.26"
streamlit = "1.40.1"
pypdf = "5.1.0"
pyperclip = "1.9.0"
python-dotenv = "1.0.1"
playwright = "1.48.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
